paginação e correção de formulas

--- a/content/modulo1.html
+++ b/content/modulo1.html
@@ -20,6 +20,8 @@
 
 	<main>
 		<article>
+
+<span class="pagina">4</span>
 			
 <p>A técnica de medição de árvores individualmente é denominada de dendrometria, palavra derivada dos vocábulos gregos dendron e metria, que significam, respectivamente, árvore e mensuração. A dendrometria, portanto, refere-se ao estudo das dimensões das árvores e objetiva, basicamente, determinar o volume florestal e, portanto, prognosticar com confiança o estoque e o incremento florestal.</p>
 <p>Existem duas maneiras para realizar as medições das árvores individualmente, as medidas diretas e as medidas indiretas. Na medição direta as dimensões da árvore são tomadas/medidas diretamente sobre a árvore, ao alcance do mensurador. Por outro lado, as medições indiretas são aquelas que dependem do uso de métodos óticos e/ou de instrumentos específicos para determinar a grandeza a ser mensurada.</p>
@@ -39,10 +41,13 @@
 <h3>Fita Métrica e Fita Diamétrica</h3>
 	<p>A Fita Métrica é utilizada para a medição da circunferência da árvore. Neste caso, o diâmetro é obtido pelo desenvolvimento da seguinte relação matemática:</p>
 
-<math><mi>D</mi><mi>A</mi><mi>P</mi><mo>=</mo><mfrac><mrow><mi>C</mi><mi>A</mi><mi>P</mi></mrow><mrow><mi>π</mi></mrow></mfrac></math>
+<p><math><mi>D</mi><mi>A</mi><mi>P</mi><mo>=</mo><mfrac><mrow><mi>C</mi><mi>A</mi><mi>P</mi></mrow><mrow><mi>π</mi></mrow></mfrac></math></p>
  
 <p>DAP é o diâmetro a altura do peito, CAP a circunferência a altura do peito e π é a proporção numérica originada da relação entre as grandezas do perímetro de uma circunferência e o seu diâmetro, cujo valor é aproximadamente 3,141592...</p>
 <p>As vantagens no uso da Fita Métrica relacionam-se ao seu baixo custo e às facilidades de aquisição, manuseio e transporte no campo. Porém, geralmente, as Fitas Métricas disponíveis no mercado dilatam com o calor e são facilmente esticadas com a força do mensurador, podendo-se superestimar o valor da circunferência medida.</p>
+
+<span class="pagina">5</span>
+
 <p>Para contornar este inconveniente, há no mercado as chamadas Fitas Diamétricas. Essas fitas são construídas com lâmina em aço ou em material sintético, menos sujeito a variações em razão da temperatura ambiente ou da força do operador. Elas vêm graduadas em escala de diâmetro, eliminando-se a necessidade de conversões.</p>
 
 <h2>Outros instrumentos utilizados para a medição do diâmetro</h2>
@@ -111,7 +116,7 @@
 		<li>Ocorrência de sub-bosque na floresta.</li>
 		<li>Definição da altura comercial.</li></ul>
 
- 
+ <span class="pagina">6</span>
 
   <figure>
 <img src="media/m1/I.19.png" alt="">
@@ -139,18 +144,21 @@
 <p>Com o modelo ajustado, constrói-se a equação e utiliza-a para estimar a altura das demais árvores da floresta que tiveram somente os DAP’s mensurados. Dessa forma, mede-se o DAP de uma quantidade maior de árvores ou de todas as árvores na unidade amostral e a altura de apenas uma parte dessas árvores, o que diminui o tempo do inventário e, consequentemente, os seus custos.</p>
 <p>Um modelo hipsométrico clássico é a equação geral da reta, ou seja:</p>
 
-<math><mi>Y</mi><mo>=</mo><mi>a</mi><mo>+</mo><mi>b</mi><mi>X</mi></math>
+<p><math><mi>Y</mi><mo>=</mo><mi>a</mi><mo>+</mo><mi>b</mi><mi>X</mi></math></p>
  
 <p>Onde, Y é a variável dependente, X é a variável independente e a e b, os parâmetros do modelo, sendo a o ponto de passagem da reta no eixo Y quando X é igual a zero e b a inclinação da reta, ou seja, a taxa de mudança em Y a cada acréscimo de uma unidade em X.</p>
 <p>Na dendrometria, pode-se substituir o Y pela altura (representada por H-height) e o X pelo DAP. Portanto, o modelo fica expresso da seguinte forma:</p>
 
-<math><mi>H</mi><mo>=</mo><mi>a</mi><mo>+</mo><mi>b</mi><mi>D</mi><mi>A</mi><mi>P</mi><mo>+</mo></math>
+<p><math><mi>H</mi><mo>=</mo><mi>a</mi><mo>+</mo><mi>b</mi><mi>D</mi><mi>A</mi><mi>P</mi><mo>+</mo></math></p>
  
 <p>As estimativas dos parâmetros a e b podem ser obtidas pelo Método dos Mínimos Quadrados, como demostrado abaixo:</p>
- <math><mi>a</mi><mo>=</mo><mover accent="true"><mrow><mi>H</mi></mrow><mo>-</mo></mover><mo>-</mo><mi>b</mi><mover accent="true"><mrow><mi>D</mi><mi>A</mi><mi>P</mi></mrow><mo>-</mo></mover></math>	;	<math><mi>b</mi><mo>=</mo><mfrac><mrow><mrow><mo stretchy="false">∑</mo><mrow><mi>D</mi><mi>A</mi><mi>P</mi><mo>.</mo><mi>H</mi></mrow></mrow><mo>-</mo><mfrac><mrow><mrow><mo stretchy="false">∑</mo><mrow><mi>D</mi><mi>A</mi><mi>P</mi><mrow><mo stretchy="false">∑</mo><mrow><mi>H</mi></mrow></mrow></mrow></mrow></mrow><mrow><mi>n</mi></mrow></mfrac></mrow><mrow><mrow><mo stretchy="false">∑</mo><mrow><msup><mrow><mi>D</mi><mi>A</mi><mi>P</mi></mrow><mrow><mn>2</mn></mrow></msup><mo>-</mo><mfrac><mrow><mo>(</mo><mrow><mo stretchy="false">∑</mo><mrow><msup><mrow><mi>D</mi><mi>A</mi><mi>P</mi><mo>)</mo></mrow><mrow><mn>2</mn></mrow></msup></mrow></mrow></mrow><mrow><mi>n</mi></mrow></mfrac></mrow></mrow></mrow></mfrac></math>
+ <p><math><mi>a</mi><mo>=</mo><mover accent="true"><mrow><mi>H</mi></mrow><mo>-</mo></mover><mo>-</mo><mi>b</mi><mover accent="true"><mrow><mi>D</mi><mi>A</mi><mi>P</mi></mrow><mo>-</mo></mover></math>    ;    <math><mi>b</mi><mo>=</mo><mfrac><mrow><mrow><mo stretchy="false">∑</mo><mrow><mi>D</mi><mi>A</mi><mi>P</mi><mo>.</mo><mi>H</mi></mrow></mrow><mo>-</mo><mfrac><mrow><mrow><mo stretchy="false">∑</mo><mrow><mi>D</mi><mi>A</mi><mi>P</mi><mrow><mo stretchy="false">∑</mo><mrow><mi>H</mi></mrow></mrow></mrow></mrow></mrow><mrow><mi>n</mi></mrow></mfrac></mrow><mrow><mrow><mo stretchy="false">∑</mo><mrow><msup><mrow><mi>D</mi><mi>A</mi><mi>P</mi></mrow><mrow><mn>2</mn></mrow></msup><mo>-</mo><mfrac><mrow><mo>(</mo><mrow><mo stretchy="false">∑</mo><mrow><msup><mrow><mi>D</mi><mi>A</mi><mi>P</mi><mo>)</mo></mrow><mrow><mn>2</mn></mrow></msup></mrow></mrow></mrow><mrow><mi>n</mi></mrow></mfrac></mrow></mrow></mrow></mfrac></math></p>
 
 <p>Neste caso, n é o tamanho da amostra, isto é, a quantidade de árvores que tiveram as alturas e os DAP’s medidos (os pares de dados do modelo). Os valores de DAP devem estar em centímetros e os de altura devem estar em metros, ou seja, da forma como foram obtidos no campo;   é a altura média das árvores;   é o diâmetro médio (DAP); e   o erro aleatório ou resíduo, a diferença entre os valores reais das alturas medidas e os valores das alturas estimadas pelo modelo.</p>
 <p>Com os parâmetros a e b estimados, deve-se substituí-los no modelo e, assim, montar a equação que vai ser utilizada para estimar as alturas das árvores que tiveram somente os DAPs mensurados.</p>
+
+<span class="pagina">7</span>
+
 <p>Para saber mais sobre modelos hipsométricos, consulte Hosokawa (1998), Soares et al. (2007), Zar (2010) e Coker (2012).</p>
 
 <h2>Exemplo de ajuste de um modelo hipsométrico</h2>
@@ -217,15 +225,18 @@
  
 <p>A reta ajustada aos pontos representa a seguinte função linear:</p>
 
-<math><mi>H</mi><mo>=</mo><mn>0,9419</mn><mo>+</mo><mn>1,686</mn><mo>.</mo><mi>D</mi><mi>A</mi><mi>P</mi></math>
+<p><math><mi>H</mi><mo>=</mo><mn>0,9419</mn><mo>+</mo><mn>1,686</mn><mo>.</mo><mi>D</mi><mi>A</mi><mi>P</mi></math></p>
  
 <p>Após o ajuste do modelo, deve-se decidir se a equação é confiável para estimar as demais alturas em razão dos DAPs das árvores. Isso é feito avaliando-se o coeficiente de determinação da reta (R²), que expressa de forma prática quanto a relação entre as alturas e os DAP’s é explicada pela reta ajustada: varia de 0 a 1,0 e quanto mais próximo de 1,0 mais precisa e melhor é a equação. Valores abaixo de 0,8 podem representar baixa relação entre as variáveis, ou seja, a equação não é confiável nas estimativas. O R² é obtido pelo quadrado do coeficiente de correlação linear de Pearson (r) entre as duas variáveis (Zar, 2010) ou pela razão entre a soma de quadrados residual (SQ<sub>res.</sub>) pela soma de quadrados total (SQ<sub>total</sub>).</p>
 
-<math><mi>R</mi><mo>²</mo><mo>=</mo><mn>1</mn><mo>-</mo><mfrac><mrow><msub><mrow><mi>S</mi><mi>Q</mi></mrow><mrow><mi>r</mi><mi>e</mi><mi>s</mi><mo>.</mo></mrow></msub></mrow><mrow><msub><mrow><mi>S</mi><mi>Q</mi></mrow><mrow><mi>t</mi><mi>o</mi><mi>t</mi><mi>a</mi><mi>l</mi></mrow></msub></mrow></mfrac></math>
+<p><math><mi>R</mi><mo>²</mo><mo>=</mo><mn>1</mn><mo>-</mo><mfrac><mrow><msub><mrow><mi>S</mi><mi>Q</mi></mrow><mrow><mi>r</mi><mi>e</mi><mi>s</mi><mo>.</mo></mrow></msub></mrow><mrow><msub><mrow><mi>S</mi><mi>Q</mi></mrow><mrow><mi>t</mi><mi>o</mi><mi>t</mi><mi>a</mi><mi>l</mi></mrow></msub></mrow></mfrac></math></p>
  
 <p>O coeficiente de determinação do ajuste (R²) da equação ajustada para as árvores-exemplo é igual a 0,973, indicando uma boa equação, por este critério de avaliação.</p>
 <p>Um segundo critério de avaliação de uma equação de regressão é a distribuição gráfica dos resíduos. Os resíduos devem estar distribuídos uniformemente e mais próximos de zero possível. Eles indicam a diferença entre os valores medidos nas árvores e os valores estimados pela equação gerada pelo modelo ajustado.</p>
 <p>Note que ao considerar uma equação confiável para estimar as alturas em razão dos DAP’s, assume-se que os valores fornecidos pela equação são os mais próximos possíveis dos valores reais. Porém, a única forma de saber o quanto os valores estimados pela equação se distanciam dos valores reais é aplicando à equação os valores de DAP das árvores que foram medidas em DAP e em altura, ou seja, insere-se na equação o DAP das árvores cujas alturas são conhecidas e verifica-se o quanto que as alturas estimadas pela equação são diferentes dos valores de alturas medidos. A diferença entre os valores conhecidos/medidos das alturas e os valores estimados pela equação são chamados de resíduos.</p>
+
+<span class="pagina">8</span>
+
 <p>A equação ajustada para as árvores-exemplo forneceu a distribuição gráfica dos resíduos mostrada na Figura 3.</p>
 
  <figure>
