--- a/content/modulo2.html
+++ b/content/modulo2.html
@@ -20,17 +20,19 @@
 
 	<main>
 		<article>
+
+<span class="pagina">9</span>			
 			
 <p>A volumetria representa a maneira de se calcular o volume de árvores na floresta, individualmente e em conjunto. O volume florestal é expresso em metros cúbicos e/ou em metros estéreos, e são nessas unidades de medida que ocorre a maioria das transações financeiras florestais.</p>
 <h2>Cubagem rigorosa</h2>
 <p>A cubagem rigorosa é a forma mais apropriada para quantificar o volume do fuste de uma árvore. Por esta técnica, secciona-se o fuste em várias partes menores, mensurando-as individualmente.</p>
 <p>Após calcular o volume dessas partes individualmente, somam-se estes volumes para obter o volume total do fuste. A maneira mais comum para realizar uma cubagem rigorosa é pelo uso da expressão matemática de Smalian, conhecida como método de Smalian (SOARES et al., 2006):</p>
 
-<math><mi>V</mi><mo>=</mo><mfrac><mrow><msub><mrow><mi>A</mi><mi>S</mi></mrow><mrow><mn>1</mn></mrow></msub><mo>+</mo><msub><mrow><mi>A</mi><mi>S</mi></mrow><mrow><mn>2</mn></mrow></msub></mrow><mrow><mn>2</mn></mrow></mfrac><mi>*</mi><mi>L</mi></math>
+<p><math><mi>V</mi><mo>=</mo><mfrac><mrow><msub><mrow><mi>A</mi><mi>S</mi></mrow><mrow><mn>1</mn></mrow></msub><mo>+</mo><msub><mrow><mi>A</mi><mi>S</mi></mrow><mrow><mn>2</mn></mrow></msub></mrow><mrow><mn>2</mn></mrow></mfrac><mi>*</mi><mi>L</mi></math></p>
  
 <p>AS<sub>1</sub> e AS<sub>2</sub> são as áreas seccionais obtidas nas extremidades de cada seção, em m², e L é o comprimento da seção. A área seccional (AS) é obtida pela expressão:</p>
 
-<math><mi>A</mi><mi>S</mi><mo>=</mo><mfrac><mrow><mi>π</mi><msup><mrow><mi>d</mi></mrow><mrow><mn>2</mn></mrow></msup></mrow><mrow><mn>4</mn></mrow></mfrac></math>
+<p><math><mi>A</mi><mi>S</mi><mo>=</mo><mfrac><mrow><mi>π</mi><msup><mrow><mi>d</mi></mrow><mrow><mn>2</mn></mrow></msup></mrow><mrow><mn>4</mn></mrow></mfrac></math></p>
  
 <p>sendo <i>d</i> o diâmetro da seção.</p>
 <p>Normalmente, o comprimento da seção (L) fica entre 1 e 2 metros, mas pode-se usar valores proporcionais ao comprimento do fuste, como proposto por Hohenadl (SANQUETTA et al., 2014).</p>
@@ -45,12 +47,12 @@
 
 <p>O fator de forma é uma relação matemática entre o volume de um cilindro que apresenta diâmetro igual ao DAP da árvore objeto de mensuração (pode-se usar o diâmetro da base da árvore também) e o volume real da árvore, mensurado por cubagem rigorosa:</p>
 
-<math><mi>f</mi><mo>=</mo><mfrac><mrow><mi>V</mi><mi>r</mi><mi>e</mi><mi>a</mi><mi>l</mi></mrow><mrow><mi>V</mi><mi>c</mi><mi>i</mi><mi>l</mi><mi>i</mi><mi>n</mi><mi>d</mi><mi>r</mi><mi>o</mi></mrow></mfrac></math>
+<p><math><mi>f</mi><mo>=</mo><mfrac><mrow><mi>V</mi><mi>r</mi><mi>e</mi><mi>a</mi><mi>l</mi></mrow><mrow><mi>V</mi><mi>c</mi><mi>i</mi><mi>l</mi><mi>i</mi><mi>n</mi><mi>d</mi><mi>r</mi><mi>o</mi></mrow></mfrac></math></p>
 
 <p>Note que, para a estimativa do volume da floresta, deve-se usar um fator de forma médio (<math><mover accent="true"><mrow><mi>f</mi></mrow><mo>-</mo></mover></math>), obtido pela cubagem rigorosa de várias árvores (amostra representativa) em todas as classes de DAP da floresta. Dessa forma, o volume do fuste de uma árvore será obtido por:</p>
 
 
-<math><mi>V</mi><mo>=</mo><mfrac><mrow><mi>π</mi><msup><mrow><mi>D</mi><mi>A</mi><mi>P</mi></mrow><mrow><mn>2</mn></mrow></msup></mrow><mrow><mn>4</mn></mrow></mfrac><mi>H</mi><mover accent="true"><mrow><mi>f</mi></mrow><mo>-</mo></mover></math>
+<p><math><mi>V</mi><mo>=</mo><mfrac><mrow><mi>π</mi><msup><mrow><mi>D</mi><mi>A</mi><mi>P</mi></mrow><mrow><mn>2</mn></mrow></msup></mrow><mrow><mn>4</mn></mrow></mfrac><mi>H</mi><mover accent="true"><mrow><mi>f</mi></mrow><mo>-</mo></mover></math></p>
  
 <p>Neste caso, deve-se observar as unidades de medida e tanto o DAP quanto a altura (H) devem ser expressos em metros (m), pois o volume será expresso em metros cúbicos (m³).</p>
 <h2>Modelos volumétricos</h2>
@@ -61,24 +63,26 @@
 
 <p>O uso do modelo de Schumacher e Hall é feito linearizando-o pela aplicação de logaritmo neperiano (ln). De acordo com as propriedades logarítmicas, o modelo linearizado fica assim, devendo ser empregado da mesma maneira que os modelos hipsométricos:</p>
 
-<math><mi>L</mi><mi>n</mi><mi>V</mi><mo>=</mo><msub><mrow><mi>β</mi></mrow><mrow><mn>0</mn></mrow></msub><mo>+</mo><msub><mrow><mi>β</mi></mrow><mrow><mn>1</mn></mrow></msub><mi>L</mi><mi>n</mi><mi> </mi><mi>D</mi><mi>A</mi><mi>P</mi><mo>+</mo><msub><mrow><mi>β</mi></mrow><mrow><mn>2</mn></mrow></msub><mi>L</mi><mi>n</mi><mi>H</mi><mo>+</mo><mi>ε</mi></math>
+<p><math><mi>L</mi><mi>n</mi><mi>V</mi><mo>=</mo><msub><mrow><mi>β</mi></mrow><mrow><mn>0</mn></mrow></msub><mo>+</mo><msub><mrow><mi>β</mi></mrow><mrow><mn>1</mn></mrow></msub><mi>L</mi><mi>n</mi><mi> </mi><mi>D</mi><mi>A</mi><mi>P</mi><mo>+</mo><msub><mrow><mi>β</mi></mrow><mrow><mn>2</mn></mrow></msub><mi>L</mi><mi>n</mi><mi>H</mi><mo>+</mo><mi>ε</mi></math></p>
  
 <h2>Volume de madeira empilhada</h2>
 
 <p>O cálculo do volume de madeira envolve o conhecimento de que o volume de uma pilha de madeira não corresponde ao volume do sólido geométrico formado pelo processo de empilhamento da madeira, i.é., as dimensões da pilha de madeira. Isso ocorre devido aos espaços vazios provocados pela forma das toras, que não permite o ajuste perfeito de umas sobre as outras.</p>
 
+<span class="pagina">10</span>
+
 <p>O volume total de uma pilha de madeira, considerando os espaços vazios, é denominado de volume estéreo (<i>st</i>) e, para saber sobre o volume real de madeira empilhada (<i>V</i>), deve-se desenvolver a seguinte expressão:</p>
 
-<math><mi>V</mi><mo>=</mo><mi>s</mi><mi>t</mi><mo>.</mo><msub><mrow><mi>f</mi></mrow><mrow><mi>e</mi></mrow></msub></math>
+<p><math><mi>V</mi><mo>=</mo><mi>s</mi><mi>t</mi><mo>.</mo><msub><mrow><mi>f</mi></mrow><mrow><mi>e</mi></mrow></msub></math></p>
  
 <p>Para se calcular o fator de empilhamento (f<sub>e</sub>) deve-se proceder à derrubada e seccionamento de algumas árvores na floresta ou na unidade amostral, realizar a cubagem rigorosa desta(s) árvore(s), empilhá-la(s) e realizar a medição do sólido geométrico formado pela pilha de madeira. O volume do sólido geométrico é obtido mensurando-se as dimensões da pilha de madeira, conforme a seguinte expressão:</p>
  
-<math><msub><mrow><mi>f</mi></mrow><mrow><mi>e</mi></mrow></msub><mo>=</mo><mfrac><mrow><mi>v</mi><mi>o</mi><mi>l</mi><mi>u</mi><mi>m</mi><mi>e</mi><mi> </mi><mi>r</mi><mi>e</mi><mi>a</mi><mi>l</mi><mi> </mi><mfenced separators="|"><mrow><msup><mrow><mi>m</mi></mrow><mrow><mn>3</mn></mrow></msup></mrow></mfenced></mrow><mrow><mi>v</mi><mi>o</mi><mi>l</mi><mi>u</mi><mi>m</mi><mi>e</mi><mi> </mi><mi>e</mi><mi>m</mi><mi>p</mi><mi>i</mi><mi>l</mi><mi>h</mi><mi>a</mi><mi>d</mi><mi>o</mi><mi> </mi><mfenced separators="|"><mrow><mi>s</mi><mi>t</mi></mrow></mfenced></mrow></mfrac></math>
+<p><math><msub><mrow><mi>f</mi></mrow><mrow><mi>e</mi></mrow></msub><mo>=</mo><mfrac><mrow><mi>v</mi><mi>o</mi><mi>l</mi><mi>u</mi><mi>m</mi><mi>e</mi><mi> </mi><mi>r</mi><mi>e</mi><mi>a</mi><mi>l</mi><mi> </mi><mfenced separators="|"><mrow><msup><mrow><mi>m</mi></mrow><mrow><mn>3</mn></mrow></msup></mrow></mfenced></mrow><mrow><mi>v</mi><mi>o</mi><mi>l</mi><mi>u</mi><mi>m</mi><mi>e</mi><mi> </mi><mi>e</mi><mi>m</mi><mi>p</mi><mi>i</mi><mi>l</mi><mi>h</mi><mi>a</mi><mi>d</mi><mi>o</mi><mi> </mi><mfenced separators="|"><mrow><mi>s</mi><mi>t</mi></mrow></mfenced></mrow></mfrac></math></p>
 
 <h2>Espessura da casca</h2>
 <p>A espessura da casca pode ser mensurada de forma simples, devendo-se apenas conhecer a relação matemática entre esta e o diâmetro de uma árvore. O diâmetro sem casca é expresso pela seguinte relação matemática:</p>
 
-<math><msub><mrow><mi>d</mi></mrow><mrow><mi>s</mi><mo>/</mo><mi>c</mi></mrow></msub><mo>=</mo><msub><mrow><mi>d</mi></mrow><mrow><mi>c</mi><mo>/</mo><mi>c</mi></mrow></msub><mo>-</mo><mn>2</mn><msub><mrow><mi>E</mi></mrow><mrow><mi>c</mi></mrow></msub></math>
+<p><math><msub><mrow><mi>d</mi></mrow><mrow><mi>s</mi><mo>/</mo><mi>c</mi></mrow></msub><mo>=</mo><msub><mrow><mi>d</mi></mrow><mrow><mi>c</mi><mo>/</mo><mi>c</mi></mrow></msub><mo>-</mo><mn>2</mn><msub><mrow><mi>E</mi></mrow><mrow><mi>c</mi></mrow></msub></math></p>
  
 <p>Onde, d<sub>s/c</sub> é o diâmetro sem casca, d<sub>c/c</sub> é o diâmetro com casca e <i>E<sub>c</sub></i> refere-se à espessura da casca.</p>
 
