--- a/content/modulo3.html
+++ b/content/modulo3.html
@@ -20,6 +20,8 @@
 
 	<main>
 		<article>
+
+<span class="pagina">11</span>
 			
 <h2>Teoria de amostragem</h2>
 <p>A amostragem consiste em observar ou mensurar uma parte de uma população florestal para obter estimativas representativas de todo o restante desta mesma população. É uma forma de estimar, com confiança, parâmetros populacionais sem precisar mensurar toda a população.</p>
@@ -34,6 +36,9 @@
 <p>O número de unidades amostrais a serem mensuradas em uma floresta (ou o número de árvores a serem cubadas rigorosamente; ou ainda o número de árvores que terão os seus pares de altura e DAP medidos, para o ajuste de equações hipsométricas) deve ser baseado em um limite de erro estabelecido pelo pesquisador/mensurador, conforme um determinado nível de probabilidade, para a variável de interesse (densidade arbórea, DAP, altura, volume, cobertura do solo, etc).</p>
 <p>Através de uma pré-amostragem, denominada de amostragem piloto, calcula-se o número de unidades amostrais necessárias para compor a amostra representativa da população dentro do limite de erro estipulado ou estabelecido.</p>
 <p>Não existe um número mínimo de parcelas a serem consideradas na amostragem piloto ou pré-amostragem, mas deve-se observar alguns procedimentos padronizados por pesquisadores e que facilitam as análises, comparações e interpretação dos resultados.</p>
+
+<span class="pagina">12</span>
+
 <p>Em vegetação nativa, no Cerrado, para o cálculo da variância exige-se no mínimo 10 unidades amostrais, enquanto que para análises de regressão exige-se no mínimo 30 unidades amostrais, como preconizado no Manual de Parcelas Permanentes dos Biomas Cerrado e Pantanal (FELFILI et al. 2005).</p>
 <p>No caso das análises de regressão, há diferentes formas de avaliar se um modelo foi bem ajustado ou não. Avalia-se as distribuições gráficas dos resíduos, os coeficientes de determinação múltipla, os erros-padrão, a significância dos coeficientes de regressão parcial, assim como a multicolinearidade das variáveis, conforme recomendado por Drapper (1981) e Zar (2010). Os seguintes softwares podem ser utilizados no ajuste das equações: Microsoft Excell®, R® e PAST®.</p>
 <h2>Estimativas dos parâmetros populacionais</h2>
@@ -45,18 +50,18 @@
 <p>É uma medida de posição e, portanto, indica o valor médio da população.</p>
 
 
-<math><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover><mo>=</mo><mfrac><mrow><mrow><msubsup><mo stretchy="false">∑</mo><mrow><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mrow><mi>n</mi></mrow></msubsup><mrow><msub><mrow><mi>X</mi></mrow><mrow><mi>i</mi></mrow></msub></mrow></mrow></mrow><mrow><mi>n</mi></mrow></mfrac></math>
+<p><math><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover><mo>=</mo><mfrac><mrow><mrow><msubsup><mo stretchy="false">∑</mo><mrow><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mrow><mi>n</mi></mrow></msubsup><mrow><msub><mrow><mi>X</mi></mrow><mrow><mi>i</mi></mrow></msub></mrow></mrow></mrow><mrow><mi>n</mi></mrow></mfrac></math></p>
 
 
 <h3>Variância - <math><msubsup><mrow><mi>s</mi></mrow><mrow><mi>x</mi></mrow><mrow><mn>2</mn></mrow></msubsup></math></h3> 
 <p>Determina o grau de dispersão da variável de interesse em relação à sua média.</p>
 
-<math><msubsup><mrow><mi>s</mi></mrow><mrow><mi>x</mi></mrow><mrow><mn>2</mn></mrow></msubsup><mo>=</mo><mfrac><mrow><mrow><munderover><mo stretchy="false">∑</mo><mrow><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mrow><mi>n</mi></mrow></munderover><mrow><msup><mrow><mo>(</mo><msub><mrow><mi>x</mi></mrow><mrow><mi>i</mi></mrow></msub><mo>-</mo><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover><mo>)</mo></mrow><mrow><mn>2</mn></mrow></msup></mrow></mrow></mrow><mrow><mi>n</mi><mo>-</mo><mn>1</mn></mrow></mfrac></math>
+<p><math><msubsup><mrow><mi>s</mi></mrow><mrow><mi>x</mi></mrow><mrow><mn>2</mn></mrow></msubsup><mo>=</mo><mfrac><mrow><mrow><munderover><mo stretchy="false">∑</mo><mrow><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mrow><mi>n</mi></mrow></munderover><mrow><msup><mrow><mo>(</mo><msub><mrow><mi>x</mi></mrow><mrow><mi>i</mi></mrow></msub><mo>-</mo><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover><mo>)</mo></mrow><mrow><mn>2</mn></mrow></msup></mrow></mrow></mrow><mrow><mi>n</mi><mo>-</mo><mn>1</mn></mrow></mfrac></math></p>
  
 <h3>Erro Padrão - <math><msub><mrow><mi>s</mi></mrow><mrow><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></msub></math></h3> 
 <p>Indica a precisão da média amostral em relação a todos os possíveis desvios-padrão (variância) na população de tamanho <i>n</i>.</p>
 
-<math><msub><mrow><mi>s</mi></mrow><mrow><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></msub><mo>=</mo><msqrt><mfrac><mrow><msubsup><mrow><mi>s</mi></mrow><mrow><mi>x</mi></mrow><mrow><mn>2</mn></mrow></msubsup></mrow><mrow><mi>n</mi></mrow></mfrac></msqrt></math>
+<p><math><msub><mrow><mi>s</mi></mrow><mrow><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></msub><mo>=</mo><msqrt><mfrac><mrow><msubsup><mrow><mi>s</mi></mrow><mrow><mi>x</mi></mrow><mrow><mn>2</mn></mrow></msubsup></mrow><mrow><mi>n</mi></mrow></mfrac></msqrt></math></p>
  
 <h3>Erro de amostragem - Ea</h3>
 <p>Erro devido ao processo de amostragem. É estimado para um nível de probabilidade (1-α).</p>
@@ -72,24 +77,26 @@
 <p>Embora a média amostral seja a melhor estimativa da média paramétrica da população, ela é apenas uma estimativa e, portanto, para inferir sobre a confiabilidade dessa estimativa é preciso calcular o Intervalo de Confiança – IC, que indica o seguinte: se todas as possíveis médias de tamanho n forem tomadas da população e se fosse calculado o Intervalo de Confiança para cada uma dessas amostras, X% desses intervalos de confiança conteriam a verdadeira média da população. Ou seja, para X% das amostras, o intervalo entre o limite <p>inferior e o limite superior do IC incluirá a verdadeira média da população.</p>
 <p>O IC só garante que X% das médias amostrais estarão dentro do intervalo (IC), sendo X a probabilidade de confiança estabelecida. Geralmente, X é estabelecido em Termos de Referência de Órgãos Ambientais ou pelo pesquisador, e fica entre 90%, 95% e 99% de confiança (P).</p>
 
-<math><mi>I</mi><mi>C</mi><mfenced open="[" close="]" separators="|"><mrow><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover><mo>-</mo><msub><mrow><mi>t</mi><mi>s</mi></mrow><mrow><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></msub><mi> </mi><mo>≤</mo><mover accent="true"><mrow><mi>X</mi></mrow><mo>-</mo></mover><mo>≤</mo><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover><mo>+</mo><msub><mrow><mi>t</mi><mi>s</mi></mrow><mrow><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></msub></mrow></mfenced><mo>=</mo><mi>P</mi></math>
+<p><math><mi>I</mi><mi>C</mi><mfenced open="[" close="]" separators="|"><mrow><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover><mo>-</mo><msub><mrow><mi>t</mi><mi>s</mi></mrow><mrow><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></msub><mi> </mi><mo>≤</mo><mover accent="true"><mrow><mi>X</mi></mrow><mo>-</mo></mover><mo>≤</mo><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover><mo>+</mo><msub><mrow><mi>t</mi><mi>s</mi></mrow><mrow><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></msub></mrow></mfenced><mo>=</mo><mi>P</mi></math></p>
 
 
 
 <p>Estimativa para o total da população:</p>
 
-<math><mover accent="true"><mrow><mi>X</mi></mrow><mo>^</mo></mover><mo>=</mo><mi>N</mi><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></math>
+<p><math><mover accent="true"><mrow><mi>X</mi></mrow><mo>^</mo></mover><mo>=</mo><mi>N</mi><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></math></p>
 
  
 <p>Intervalo de confiança para o total:</p>
 
-<math><mi>I</mi><mi>C</mi><mfenced open="[" close="]" separators="|"><mrow><mover accent="true"><mrow><mi>X</mi></mrow><mo>^</mo></mover><mo>-</mo><msub><mrow><mi>N</mi><mi>t</mi><mi>s</mi></mrow><mrow><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></msub><mi> </mi><mo>≤</mo><mi>X</mi><mo>≤</mo><mover accent="true"><mrow><mi>X</mi></mrow><mo>^</mo></mover><mo>+</mo><msub><mrow><mi>N</mi><mi>t</mi><mi>s</mi></mrow><mrow><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></msub></mrow></mfenced><mo>=</mo><mi>P</mi></math>
+<p><math><mi>I</mi><mi>C</mi><mfenced open="[" close="]" separators="|"><mrow><mover accent="true"><mrow><mi>X</mi></mrow><mo>^</mo></mover><mo>-</mo><msub><mrow><mi>N</mi><mi>t</mi><mi>s</mi></mrow><mrow><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></msub><mi> </mi><mo>≤</mo><mi>X</mi><mo>≤</mo><mover accent="true"><mrow><mi>X</mi></mrow><mo>^</mo></mover><mo>+</mo><msub><mrow><mi>N</mi><mi>t</mi><mi>s</mi></mrow><mrow><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></msub></mrow></mfenced><mo>=</mo><mi>P</mi></math></p>
 
 <h2>Intensidade de amostragem</h2>
 <p>A intensidade amostral é a razão entre o tamanho da amostra (n) e o tamanho da população, isto é, a razão entre o número de unidades amostrais que compõem a amostra e o número total de unidades amostrais da população (N).</p>
 <p>A intensidade amostral pode ser expressa também pela razão entre a área amostrada (a) e a área total da população (A).</p>
 
-<math><mi>f</mi><mo>=</mo><mfrac><mrow><mi>n</mi></mrow><mrow><mi>N</mi></mrow></mfrac><mi> </mi><mi>o</mi><mi>u</mi><mi> </mi><mi>f</mi><mo>=</mo><mfrac><mrow><mi>a</mi></mrow><mrow><mi>A</mi></mrow></mfrac></math>
+<p><math><mi>f</mi><mo>=</mo><mfrac><mrow><mi>n</mi></mrow><mrow><mi>N</mi></mrow></mfrac><mi> </mi><mi>o</mi><mi>u</mi><mi> </mi><mi>f</mi><mo>=</mo><mfrac><mrow><mi>a</mi></mrow><mrow><mi>A</mi></mrow></mfrac></math></p>
+
+<span class="pagina">13</span>
  
 <h2>Número ideal de unidades amostrais que devem compor uma amostra</h2>
 <p>A expressão abaixo pode ser utilizada para quantificar o número mínimo de unidades amostrais que devem compor a amostra:</p>
