--- a/content/modulo4.html
+++ b/content/modulo4.html
@@ -21,6 +21,8 @@
 	<main>
 		<article>
 
+<span class="pagina">14</span>
+
 <h2>Amostragem aleatória</h2>
 <p>Este é o procedimento mais usual para inventários florestais e baseia-se no pressuposto de que todas as unidades amostrais têm a mesma chance de serem amostradas na população.</p>
 <h2>Pré-requisito:</h2>
@@ -299,16 +301,16 @@ Procedimentos:</p>
 <p>A próxima etapa é estimar os parâmetros da população que permitem checar a representatividade amostral.</p>
 <h3>Média</h3>
 
-<math><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover><mo>=</mo><mfrac><mrow><mrow><munderover><mo stretchy="false">∑</mo><mrow><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mrow><mi>n</mi></mrow></munderover><mrow><msub><mrow><mi>X</mi></mrow><mrow><mi>i</mi></mrow></msub></mrow></mrow></mrow><mrow><mi>n</mi></mrow></mfrac><mo>=</mo><mi> </mi><mfrac><mrow><mo>(</mo><mn>15,39</mn><mo>+</mo><mn>12,79</mn><mo>+</mo><mo>…</mo><mo>+</mo><mn>15,32</mn><mo>)</mo></mrow><mrow><mn>10</mn></mrow></mfrac><mo>=</mo><mn>14,08</mn><mi>m</mi><mo>³</mo></math> 
+<p><math><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover><mo>=</mo><mfrac><mrow><mrow><munderover><mo stretchy="false">∑</mo><mrow><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mrow><mi>n</mi></mrow></munderover><mrow><msub><mrow><mi>X</mi></mrow><mrow><mi>i</mi></mrow></msub></mrow></mrow></mrow><mrow><mi>n</mi></mrow></mfrac><mo>=</mo><mi> </mi><mfrac><mrow><mo>(</mo><mn>15,39</mn><mo>+</mo><mn>12,79</mn><mo>+</mo><mo>…</mo><mo>+</mo><mn>15,32</mn><mo>)</mo></mrow><mrow><mn>10</mn></mrow></mfrac><mo>=</mo><mn>14,08</mn><mi>m</mi><mo>³</mo></math> </p>
 
 <h3>Variância</h3>
 
-<math><msubsup><mrow><mi>s</mi></mrow><mrow><mi>x</mi></mrow><mrow><mn>2</mn></mrow></msubsup><mo>=</mo><mfrac><mrow><mrow><munderover><mo stretchy="false">∑</mo><mrow><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mrow><mi>n</mi></mrow></munderover><mrow><msup><mrow><mfenced separators="|"><mrow><msub><mrow><mi>X</mi></mrow><mrow><mi>i</mi></mrow></msub><mo>-</mo><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></mfenced></mrow><mrow><mn>2</mn></mrow></msup></mrow></mrow></mrow><mrow><mi>n</mi><mo>-</mo><mn>1</mn></mrow></mfrac><mo>=</mo><mfrac><mrow><msup><mrow><mfenced separators="|"><mrow><mn>15,39</mn><mo>-</mo><mn>14,08</mn></mrow></mfenced></mrow><mrow><mn>2</mn></mrow></msup><mo>+</mo><msup><mrow><mfenced separators="|"><mrow><mn>12,79</mn><mo>-</mo><mn>14,08</mn></mrow></mfenced></mrow><mrow><mn>2</mn></mrow></msup><mo>+</mo><mo>…</mo><mo>+</mo><msup><mrow><mfenced separators="|"><mrow><mn>15,32</mn><mo>-</mo><mn>14,08</mn></mrow></mfenced></mrow><mrow><mn>2</mn></mrow></msup></mrow><mrow><mn>9</mn></mrow></mfrac><mo>=</mo><mo>(</mo><mn>7,0481</mn><mi>m</mi><mo>³</mo><mo>)</mo><mo>²</mo></math>
+<p><math><msubsup><mrow><mi>s</mi></mrow><mrow><mi>x</mi></mrow><mrow><mn>2</mn></mrow></msubsup><mo>=</mo><mfrac><mrow><mrow><munderover><mo stretchy="false">∑</mo><mrow><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mrow><mi>n</mi></mrow></munderover><mrow><msup><mrow><mfenced separators="|"><mrow><msub><mrow><mi>X</mi></mrow><mrow><mi>i</mi></mrow></msub><mo>-</mo><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></mfenced></mrow><mrow><mn>2</mn></mrow></msup></mrow></mrow></mrow><mrow><mi>n</mi><mo>-</mo><mn>1</mn></mrow></mfrac><mo>=</mo><mfrac><mrow><msup><mrow><mfenced separators="|"><mrow><mn>15,39</mn><mo>-</mo><mn>14,08</mn></mrow></mfenced></mrow><mrow><mn>2</mn></mrow></msup><mo>+</mo><msup><mrow><mfenced separators="|"><mrow><mn>12,79</mn><mo>-</mo><mn>14,08</mn></mrow></mfenced></mrow><mrow><mn>2</mn></mrow></msup><mo>+</mo><mo>…</mo><mo>+</mo><msup><mrow><mfenced separators="|"><mrow><mn>15,32</mn><mo>-</mo><mn>14,08</mn></mrow></mfenced></mrow><mrow><mn>2</mn></mrow></msup></mrow><mrow><mn>9</mn></mrow></mfrac><mo>=</mo><mo>(</mo><mn>7,0481</mn><mi>m</mi><mo>³</mo><mo>)</mo><mo>²</mo></math></p>
 
 
 <h3>A representatividade amostral é calculada da seguinte forma:</h3>
 
-<math><mi>n</mi><mo>=</mo><mfrac><mrow><msup><mrow><mi>t</mi></mrow><mrow><mn>2</mn></mrow></msup><msubsup><mrow><mi>s</mi></mrow><mrow><mi>x</mi></mrow><mrow><mn>2</mn></mrow></msubsup></mrow><mrow><msup><mrow><mi>E</mi></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac><mo>=</mo><mi> </mi><mfrac><mrow><msup><mrow><mn>2,262</mn></mrow><mrow><mn>2</mn></mrow></msup><mo>×</mo><mn>7,0481</mn></mrow><mrow><msup><mrow><mn>1,408</mn></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac><mo>=</mo><mn>18,19</mn><mi> </mi><mi>p</mi><mi>a</mi><mi>r</mi><mi>c</mi><mi>e</mi><mi>l</mi><mi>a</mi><mi>s</mi></math>
+<p><math><mi>n</mi><mo>=</mo><mfrac><mrow><msup><mrow><mi>t</mi></mrow><mrow><mn>2</mn></mrow></msup><msubsup><mrow><mi>s</mi></mrow><mrow><mi>x</mi></mrow><mrow><mn>2</mn></mrow></msubsup></mrow><mrow><msup><mrow><mi>E</mi></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac><mo>=</mo><mi> </mi><mfrac><mrow><msup><mrow><mn>2,262</mn></mrow><mrow><mn>2</mn></mrow></msup><mo>×</mo><mn>7,0481</mn></mrow><mrow><msup><mrow><mn>1,408</mn></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac><mo>=</mo><mn>18,19</mn><mi> </mi><mi>p</mi><mi>a</mi><mi>r</mi><mi>c</mi><mi>e</mi><mi>l</mi><mi>a</mi><mi>s</mi></math></p>
  
 <p>O valor tabelado de <i>t-Student</i> com 9 graus de liberdade (10<sup>-1</sup>) e 95% de probabilidade (1-95) é:</p>
 
@@ -317,17 +319,19 @@ Procedimentos:</p>
 
 <p>O limite de erro admitido para esta amostragem foi de 10% da média:</p>
 
-<math><mi>E</mi><mo>=</mo><mn>0,1</mn><mo>×</mo><mn>14,08</mn><mo>=</mo><mn>1,408</mn><mi>m</mi><mo>³</mo></math>
+<p><math><mi>E</mi><mo>=</mo><mn>0,1</mn><mo>×</mo><mn>14,08</mn><mo>=</mo><mn>1,408</mn><mi>m</mi><mo>³</mo></math></p>
  
 <p>Neste caso, verificou-se que a amostragem não foi suficiente para representar significativamente a população, pois, com esta variância nos volumes das parcelas seriam necessárias pelo menos 18 parcelas para conseguir a representatividade estatística da população.</p>
 <p>O passo seguinte é ajustar a intensidade amostral até atingir um valor de n constante. Isso é feito calculando-se sucessivos valores de <i>n</i>.</p>
 <p>Primeiramente, calcula-se um n considerando uma amostragem de 18 parcelas onde foram obtidas a mesma média e variância das 10 parcelas já amostradas (suposição). Note que agora o valor de t será ajustado para o valor que represente 17 graus de liberdade [ ], com os mesmos 95% de confiabilidade, da seguinte forma:</p>
 
-<math><mi>n</mi><mo>=</mo><mfrac><mrow><msup><mrow><mi>t</mi></mrow><mrow><mn>2</mn></mrow></msup><msubsup><mrow><mi>s</mi></mrow><mrow><mi>x</mi></mrow><mrow><mn>2</mn></mrow></msubsup></mrow><mrow><msup><mrow><mi>E</mi></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac><mo>=</mo><mi> </mi><mfrac><mrow><msup><mrow><mn>2,11</mn></mrow><mrow><mn>2</mn></mrow></msup><mo>×</mo><mn>7,0481</mn></mrow><mrow><msup><mrow><mn>1,408</mn></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac><mo>=</mo><mn>15,8</mn><mi> </mi><mi>p</mi><mi>a</mi><mi>r</mi><mi>c</mi><mi>e</mi><mi>l</mi><mi>a</mi><mi>s</mi></math>
+<p><math><mi>n</mi><mo>=</mo><mfrac><mrow><msup><mrow><mi>t</mi></mrow><mrow><mn>2</mn></mrow></msup><msubsup><mrow><mi>s</mi></mrow><mrow><mi>x</mi></mrow><mrow><mn>2</mn></mrow></msubsup></mrow><mrow><msup><mrow><mi>E</mi></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac><mo>=</mo><mi> </mi><mfrac><mrow><msup><mrow><mn>2,11</mn></mrow><mrow><mn>2</mn></mrow></msup><mo>×</mo><mn>7,0481</mn></mrow><mrow><msup><mrow><mn>1,408</mn></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac><mo>=</mo><mn>15,8</mn><mi> </mi><mi>p</mi><mi>a</mi><mi>r</mi><mi>c</mi><mi>e</mi><mi>l</mi><mi>a</mi><mi>s</mi></math></p>
  
 <p>O número 15 ainda não é suficiente para ser considerado representativo da população, pois não está próximo de 18, o valor anterior. Dessa forma, repete-se o cálculo de n considerando 14 graus de liberdade e 95% de confiança [t<sub>(14;0,05)</sub>=2,145]:</p>
 
-<math><mi>n</mi><mo>=</mo><mfrac><mrow><msup><mrow><mi>t</mi></mrow><mrow><mn>2</mn></mrow></msup><msubsup><mrow><mi>s</mi></mrow><mrow><mi>x</mi></mrow><mrow><mn>2</mn></mrow></msubsup></mrow><mrow><msup><mrow><mi>E</mi></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac><mo>=</mo><mi> </mi><mfrac><mrow><msup><mrow><mn>2,145</mn></mrow><mrow><mn>2</mn></mrow></msup><mo>×</mo><mn>7,0481</mn></mrow><mrow><msup><mrow><mn>1,408</mn></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac><mo>=</mo><mn>16,3</mn><mi> </mi><mi>p</mi><mi>a</mi><mi>r</mi><mi>c</mi><mi>e</mi><mi>l</mi><mi>a</mi><mi>s</mi></math>
+<span class="pagina">15</span>
+
+<p><math><mi>n</mi><mo>=</mo><mfrac><mrow><msup><mrow><mi>t</mi></mrow><mrow><mn>2</mn></mrow></msup><msubsup><mrow><mi>s</mi></mrow><mrow><mi>x</mi></mrow><mrow><mn>2</mn></mrow></msubsup></mrow><mrow><msup><mrow><mi>E</mi></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac><mo>=</mo><mi> </mi><mfrac><mrow><msup><mrow><mn>2,145</mn></mrow><mrow><mn>2</mn></mrow></msup><mo>×</mo><mn>7,0481</mn></mrow><mrow><msup><mrow><mn>1,408</mn></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac><mo>=</mo><mn>16,3</mn><mi> </mi><mi>p</mi><mi>a</mi><mi>r</mi><mi>c</mi><mi>e</mi><mi>l</mi><mi>a</mi><mi>s</mi></math></p>
  
 <p>Note que desta vez a intensidade amostral foi praticamente a mesma que a anterior, ou seja, 16 parcelas. O procedimento agora é voltar ao campo e medir mais seis parcelas, pois 10 já foram medidas no inventário piloto. Isto feito, pode-se dar sequência às estimativas dos parâmetros populacionais.</p>
 <p>Como exercício, lista-se mais seis valores de volume total (m³) para as parcelas complementares do inventário florestal, considerando-o como o inventário definitivo:</p>
@@ -357,11 +361,11 @@ Procedimentos:</p>
 <p>Calcula-se uma nova média e variância amostral e as demais estimativas dos parâmetros populacionais.</p>
 <h3>Média</h3>
 
-<math><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover><mo>=</mo><mfrac><mrow><mrow><munderover><mo stretchy="false">∑</mo><mrow><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mrow><mi>n</mi></mrow></munderover><mrow><msub><mrow><mi>X</mi></mrow><mrow><mi>i</mi></mrow></msub></mrow></mrow></mrow><mrow><mi>n</mi></mrow></mfrac><mo>=</mo><mi> </mi><mfrac><mrow><mo>(</mo><mn>15,39</mn><mo>+</mo><mn>12,79</mn><mo>+</mo><mo>…</mo><mo>+</mo><mn>11,05</mn><mo>)</mo></mrow><mrow><mn>16</mn></mrow></mfrac><mo>=</mo><mn>13,46</mn><mi>m</mi><mo>³</mo></math>
+<p><math><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover><mo>=</mo><mfrac><mrow><mrow><munderover><mo stretchy="false">∑</mo><mrow><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mrow><mi>n</mi></mrow></munderover><mrow><msub><mrow><mi>X</mi></mrow><mrow><mi>i</mi></mrow></msub></mrow></mrow></mrow><mrow><mi>n</mi></mrow></mfrac><mo>=</mo><mi> </mi><mfrac><mrow><mo>(</mo><mn>15,39</mn><mo>+</mo><mn>12,79</mn><mo>+</mo><mo>…</mo><mo>+</mo><mn>11,05</mn><mo>)</mo></mrow><mrow><mn>16</mn></mrow></mfrac><mo>=</mo><mn>13,46</mn><mi>m</mi><mo>³</mo></math></p>
  
 <h3>Variância</h3>
 
-<math><msubsup><mrow><mi>s</mi></mrow><mrow><mi>x</mi></mrow><mrow><mn>2</mn></mrow></msubsup><mo>=</mo><mfrac><mrow><mrow><munderover><mo stretchy="false">∑</mo><mrow><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mrow><mi>n</mi></mrow></munderover><mrow><msup><mrow><mfenced separators="|"><mrow><msub><mrow><mi>X</mi></mrow><mrow><mi>i</mi></mrow></msub><mo>-</mo><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></mfenced></mrow><mrow><mn>2</mn></mrow></msup></mrow></mrow></mrow><mrow><mi>n</mi><mo>-</mo><mn>1</mn></mrow></mfrac><mo>=</mo><mfrac><mrow><msup><mrow><mfenced separators="|"><mrow><mn>15,39</mn><mo>-</mo><mn>13,46</mn></mrow></mfenced></mrow><mrow><mn>2</mn></mrow></msup><mo>+</mo><mo>…</mo></mrow><mrow><mn>15</mn></mrow></mfrac><mo>=</mo><mo>(</mo><mn>5,7694</mn><mi>m</mi><mo>³</mo><mo>)</mo><mo>²</mo></math>
+<p><math><msubsup><mrow><mi>s</mi></mrow><mrow><mi>x</mi></mrow><mrow><mn>2</mn></mrow></msubsup><mo>=</mo><mfrac><mrow><mrow><munderover><mo stretchy="false">∑</mo><mrow><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mrow><mi>n</mi></mrow></munderover><mrow><msup><mrow><mfenced separators="|"><mrow><msub><mrow><mi>X</mi></mrow><mrow><mi>i</mi></mrow></msub><mo>-</mo><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></mfenced></mrow><mrow><mn>2</mn></mrow></msup></mrow></mrow></mrow><mrow><mi>n</mi><mo>-</mo><mn>1</mn></mrow></mfrac><mo>=</mo><mfrac><mrow><msup><mrow><mfenced separators="|"><mrow><mn>15,39</mn><mo>-</mo><mn>13,46</mn></mrow></mfenced></mrow><mrow><mn>2</mn></mrow></msup><mo>+</mo><mo>…</mo></mrow><mrow><mn>15</mn></mrow></mfrac><mo>=</mo><mo>(</mo><mn>5,7694</mn><mi>m</mi><mo>³</mo><mo>)</mo><mo>²</mo></math></p>
  
 <h3>Erro padrão</h3>
 
@@ -387,11 +391,11 @@ Procedimentos:</p>
 
 <h3>Total da população</h3>
 
-<math><mover accent="true"><mrow><mi>X</mi></mrow><mo>^</mo></mover><mo>=</mo><mn>500</mn><mi> </mi><mi mathvariant="normal">p</mi><mi mathvariant="normal">a</mi><mi mathvariant="normal">r</mi><mi mathvariant="normal">c</mi><mi mathvariant="normal">e</mi><mi mathvariant="normal">l</mi><mi mathvariant="normal">a</mi><mi mathvariant="normal">s</mi><mo>×</mo><mn>13,46</mn><mi>m</mi><mo>³</mo><mo>.</mo><msup><mrow><mi>p</mi><mi>a</mi><mi>r</mi><mi>c</mi><mi>e</mi><mi>l</mi><mi>a</mi></mrow><mrow><mo>-</mo><mn>1</mn></mrow></msup><mo>=</mo><mn>6.730</mn><mi>m</mi><mo>³</mo></math>
+<p><math><mover accent="true"><mrow><mi>X</mi></mrow><mo>^</mo></mover><mo>=</mo><mn>500</mn><mi> </mi><mi mathvariant="normal">p</mi><mi mathvariant="normal">a</mi><mi mathvariant="normal">r</mi><mi mathvariant="normal">c</mi><mi mathvariant="normal">e</mi><mi mathvariant="normal">l</mi><mi mathvariant="normal">a</mi><mi mathvariant="normal">s</mi><mo>×</mo><mn>13,46</mn><mi>m</mi><mo>³</mo><mo>.</mo><msup><mrow><mi>p</mi><mi>a</mi><mi>r</mi><mi>c</mi><mi>e</mi><mi>l</mi><mi>a</mi></mrow><mrow><mo>-</mo><mn>1</mn></mrow></msup><mo>=</mo><mn>6.730</mn><mi>m</mi><mo>³</mo></math></p>
  
 <h3>Estimativa do total por hectare</h3>
 
-<math><mover accent="true"><mrow><mi>X</mi></mrow><mo>^</mo></mover><mo>=</mo><mfrac><mrow><mn>6,730</mn><mi>m</mi><mo>³</mo></mrow><mrow><mn>50</mn><mi>h</mi><mi>a</mi></mrow></mfrac><mo>=</mo><mn>1346</mn><mi>m</mi><mo>³</mo><mo>.</mo><msup><mrow><mi>h</mi><mi>a</mi></mrow><mrow><mo>-</mo><mn>1</mn></mrow></msup></math>
+<p><math><mover accent="true"><mrow><mi>X</mi></mrow><mo>^</mo></mover><mo>=</mo><mfrac><mrow><mn>6,730</mn><mi>m</mi><mo>³</mo></mrow><mrow><mn>50</mn><mi>h</mi><mi>a</mi></mrow></mfrac><mo>=</mo><mn>1346</mn><mi>m</mi><mo>³</mo><mo>.</mo><msup><mrow><mi>h</mi><mi>a</mi></mrow><mrow><mo>-</mo><mn>1</mn></mrow></msup></math></p>
  
 <h3>Intervalo de confiança para o total da população</h3>
 
@@ -423,7 +427,7 @@ Procedimentos:</p>
 
 <p>O raio da parcela de área variável R é calculado pela distância do ponto central à sexta árvore (R6) adicionado da metade o diâmetro desta sexta árvore:</p>
 
-<math><mi>R</mi><mo>=</mo><msub><mrow><mi>R</mi></mrow><mrow><mn>6</mn></mrow></msub><mo>+</mo><mfrac><mrow><msub><mrow><mi>d</mi></mrow><mrow><mn>6</mn></mrow></msub></mrow><mrow><mn>2</mn></mrow></mfrac></math>
+<p><math><mi>R</mi><mo>=</mo><msub><mrow><mi>R</mi></mrow><mrow><mn>6</mn></mrow></msub><mo>+</mo><mfrac><mrow><msub><mrow><mi>d</mi></mrow><mrow><mn>6</mn></mrow></msub></mrow><mrow><mn>2</mn></mrow></mfrac></math></p>
  
 <h2>Estimativa do número de árvores por hectare </h2>
 
@@ -431,20 +435,22 @@ Procedimentos:</p>
 
 <p>Considerando que apenas metade da sexta árvore está dentro da parcela, pois é a distância entre o ponto central P e o centro da sexta árvore que determinam o raio da parcela R, cada parcela possuirá 5,5 árvores e não seis. Desta forma, a estimativa do número de árvores por hectare (N) se dá pela relação abaixo:</p>
 
-<math><mi>N</mi><mo>=</mo><mfenced separators="|"><mrow><mn>5,5</mn></mrow></mfenced><mo>.</mo><mfrac><mrow><mn>10.000</mn></mrow><mrow><mi>π</mi><msup><mrow><mi>R</mi></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac><mo>=</mo><mfrac><mrow><mn>55.000</mn></mrow><mrow><mi>π</mi><msup><mrow><mi>R</mi></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac></math>
+<p><math><mi>N</mi><mo>=</mo><mfenced separators="|"><mrow><mn>5,5</mn></mrow></mfenced><mo>.</mo><mfrac><mrow><mn>10.000</mn></mrow><mrow><mi>π</mi><msup><mrow><mi>R</mi></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac><mo>=</mo><mfrac><mrow><mn>55.000</mn></mrow><mrow><mi>π</mi><msup><mrow><mi>R</mi></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac></math></p>
+
+<span class="pagina">16</span>
 
 <p>Onde πR<sup>2</sup> é a área da unidade amostral.</p>
 
 <h2>Estimativa da área basal por hectare</h2>
 
-<math><mi>G</mi><mo>=</mo><mfrac><mrow><mo>[</mo><msubsup><mrow><mi>d</mi></mrow><mrow><mn>1</mn></mrow><mrow><mn>2</mn></mrow></msubsup><mo>+</mo><msubsup><mrow><mi>d</mi></mrow><mrow><mn>2</mn></mrow><mrow><mn>2</mn></mrow></msubsup><mo>+</mo><msubsup><mrow><mi>d</mi></mrow><mrow><mn>3</mn></mrow><mrow><mn>2</mn></mrow></msubsup><mo>+</mo><msubsup><mrow><mi>d</mi></mrow><mrow><mn>4</mn></mrow><mrow><mn>2</mn></mrow></msubsup><mo>+</mo><msubsup><mrow><mi>d</mi></mrow><mrow><mn>5</mn></mrow><mrow><mn>2</mn></mrow></msubsup><mo>+</mo><msup><mrow><mfenced separators="|"><mrow><mfrac><mrow><msub><mrow><mi>d</mi></mrow><mrow><mn>6</mn></mrow></msub></mrow><mrow><mn>2</mn></mrow></mfrac></mrow></mfenced></mrow><mrow><mn>2</mn></mrow></msup><mo>]</mo></mrow><mrow><msup><mrow><mi>R</mi></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac><mi mathvariant="normal">*</mi><mn>2500</mn></math>
+<p><math><mi>G</mi><mo>=</mo><mfrac><mrow><mo>[</mo><msubsup><mrow><mi>d</mi></mrow><mrow><mn>1</mn></mrow><mrow><mn>2</mn></mrow></msubsup><mo>+</mo><msubsup><mrow><mi>d</mi></mrow><mrow><mn>2</mn></mrow><mrow><mn>2</mn></mrow></msubsup><mo>+</mo><msubsup><mrow><mi>d</mi></mrow><mrow><mn>3</mn></mrow><mrow><mn>2</mn></mrow></msubsup><mo>+</mo><msubsup><mrow><mi>d</mi></mrow><mrow><mn>4</mn></mrow><mrow><mn>2</mn></mrow></msubsup><mo>+</mo><msubsup><mrow><mi>d</mi></mrow><mrow><mn>5</mn></mrow><mrow><mn>2</mn></mrow></msubsup><mo>+</mo><msup><mrow><mfenced separators="|"><mrow><mfrac><mrow><msub><mrow><mi>d</mi></mrow><mrow><mn>6</mn></mrow></msub></mrow><mrow><mn>2</mn></mrow></mfrac></mrow></mfenced></mrow><mrow><mn>2</mn></mrow></msup><mo>]</mo></mrow><mrow><msup><mrow><mi>R</mi></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac><mi mathvariant="normal">*</mi><mn>2500</mn></math></p>
  
 <h2>Estimativa do volume por hectare </h2>
 
 <p>A estimativa do volume por hectare, a partir da volumetria de cada uma das seis árvores amostradas é dada por:</p> 
 
 
-<math><mi>V</mi><mo>=</mo><mi> </mi><mfrac><mrow><msub><mrow><mo>(</mo><mi>V</mi></mrow><mrow><mn>1</mn></mrow></msub><mo>+</mo><msub><mrow><mi>V</mi></mrow><mrow><mn>2</mn></mrow></msub><mo>+</mo><msub><mrow><mi>V</mi></mrow><mrow><mn>3</mn></mrow></msub><mo>+</mo><msub><mrow><mi>V</mi></mrow><mrow><mn>4</mn></mrow></msub><mo>+</mo><msub><mrow><mi>V</mi></mrow><mrow><mn>5</mn></mrow></msub><mo>+</mo><mfrac><mrow><msub><mrow><mi>V</mi></mrow><mrow><mn>6</mn></mrow></msub></mrow><mrow><mn>2</mn></mrow></mfrac><mi> </mi><mo>)</mo></mrow><mrow><mi>π</mi><msup><mrow><mi>R</mi></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac><mi>*</mi><mn>10.000</mn></math>
+<p><math><mi>V</mi><mo>=</mo><mi> </mi><mfrac><mrow><msub><mrow><mo>(</mo><mi>V</mi></mrow><mrow><mn>1</mn></mrow></msub><mo>+</mo><msub><mrow><mi>V</mi></mrow><mrow><mn>2</mn></mrow></msub><mo>+</mo><msub><mrow><mi>V</mi></mrow><mrow><mn>3</mn></mrow></msub><mo>+</mo><msub><mrow><mi>V</mi></mrow><mrow><mn>4</mn></mrow></msub><mo>+</mo><msub><mrow><mi>V</mi></mrow><mrow><mn>5</mn></mrow></msub><mo>+</mo><mfrac><mrow><msub><mrow><mi>V</mi></mrow><mrow><mn>6</mn></mrow></msub></mrow><mrow><mn>2</mn></mrow></mfrac><mi> </mi><mo>)</mo></mrow><mrow><mi>π</mi><msup><mrow><mi>R</mi></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac><mi>*</mi><mn>10.000</mn></math></p>
 
 
  
