--- a/content/modulo5.html
+++ b/content/modulo5.html
@@ -20,6 +20,8 @@
 
 	<main>
 		<article>
+
+<span class="pagina">17</span>
 			
 <h2>Fitossociologia</h2>
 <p>Fitossociologia é um processo relacionado a métodos de reconhecimento e definição de comunidades de plantas. Phyto significa planta e sociologia grupos ou agrupamentos. </p>
@@ -32,11 +34,11 @@
 <p>Expressa a participação das diferentes espécies dentro da associação vegetal.</p>
 <p>Densidade absoluta (DA) indica o número de indivíduos de uma espécie por unidade de área [hectare (ha)].</p>
 
-<math><mi>D</mi><mi>A</mi><mo>=</mo><mfrac><mrow><mi>n</mi></mrow><mrow><mi>Á</mi><mi>r</mi><mi>e</mi><mi>a</mi></mrow></mfrac></math>
+<p><math><mi>D</mi><mi>A</mi><mo>=</mo><mfrac><mrow><mi>n</mi></mrow><mrow><mi>Á</mi><mi>r</mi><mi>e</mi><mi>a</mi></mrow></mfrac></math></p>
  
 <p>Densidade relativa (DR) indica a participação de cada espécie em relação ao número total de árvores/indivíduos. </p>
 
-<math><mi>D</mi><mi>R</mi><mo>=</mo><mfenced separators="|"><mrow><mfrac><mrow><mi>n</mi></mrow><mrow><mi>N</mi></mrow></mfrac></mrow></mfenced><mi>*</mi><mn>100</mn></math>
+<p><math><mi>D</mi><mi>R</mi><mo>=</mo><mfenced separators="|"><mrow><mfrac><mrow><mi>n</mi></mrow><mrow><mi>N</mi></mrow></mfrac></mrow></mfenced><mi>*</mi><mn>100</mn></math></p>
 
  
 <p><p>n = número de indivíduos de uma determinada espécie.</p>
@@ -47,7 +49,7 @@ N = número total de indivíduos.</p>
 <p>Exprime a distribuição espacial de cada espécie na área. Indica o número de unidades amostrais que uma espécie ocorre e relação ao número total de unidades amostrais.</p>
 <p>Frequência absoluta (FA) indica a porcentagem (ou proporção) de ocorrência de uma espécie em uma determinada área.</p>
 
-<math><mi>F</mi><mi>A</mi><mo>=</mo><mfrac><mrow><mi>p</mi><mi>i</mi></mrow><mrow><mi>P</mi></mrow></mfrac><mi>*</mi><mn>100</mn></math>
+<p><math><mi>F</mi><mi>A</mi><mo>=</mo><mfrac><mrow><mi>p</mi><mi>i</mi></mrow><mrow><mi>P</mi></mrow></mfrac><mi>*</mi><mn>100</mn></math></p>
  
 
 <p>Pi = número de parcelas (unidades amostrais) com ocorrência da espécie i.</p>
@@ -83,6 +85,9 @@ N = número total de indivíduos.</p>
 <p><math><mi>I</mi><mi>V</mi><mi>I</mi><mo>=</mo><mi>D</mi><mi>R</mi><mo>+</mo><mi>F</mi><mi>R</mi><mo>+</mo><mi>D</mi><mi>o</mi><mi>R</mi></math> </p>
 
 <p>Teoricamente, a espécie mais importante em termos de IVI é aquela que apresenta o maior sucesso em explorar os recursos de seu habitat. A partir da análise de cada parâmetro que compõe o IVI pode-se compreender se a espécie é abundante ou não, se apresenta distribuição agrupada ou dispersa e também se ela possui grande área basal ou não, dando uma ideia sobre densidade, distribuição espacial e a dimensão alcançada pela população de uma espécie em relação às demais.</p>
+
+<span class="pagina">18</span>
+
 <p>Para saber mais sobre fitossociologia, consulte Mueller-Dombois; Ellenberg (1974), Felfili; Venturoli (2000) e Kent (2012).</p>
 
 <h2>Diversidade</h2>
@@ -100,7 +105,7 @@ N = número total de indivíduos.</p>
 
 <p>O índice de diversidade de Shannon (H’) assume que os indivíduos são amostrados de forma aleatória de uma população infinitamente grande, assumindo também que todas as espécies estão representadas na amostra. É um índice baseado na abundância proporcional das espécies na comunidade:</p>
 
-<math><msup><mrow><mi>H</mi></mrow><mrow><mi>'</mi></mrow></msup><mo>=</mo><mi> </mi><mo>-</mo><mrow><munderover><mo stretchy="false">∑</mo><mrow><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mrow><mi>s</mi></mrow></munderover><mrow><mi>p</mi><mi>i</mi><mo>.</mo><mi mathvariant="normal">l</mi><mi mathvariant="normal">n</mi><mo>⁡</mo><mo>(</mo><mi>p</mi><mi>i</mi></mrow></mrow><mo>)</mo></math>
+<p><math><msup><mrow><mi>H</mi></mrow><mrow><mi>'</mi></mrow></msup><mo>=</mo><mi> </mi><mo>-</mo><mrow><munderover><mo stretchy="false">∑</mo><mrow><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mrow><mi>s</mi></mrow></munderover><mrow><mi>p</mi><mi>i</mi><mo>.</mo><mi mathvariant="normal">l</mi><mi mathvariant="normal">n</mi><mo>⁡</mo><mo>(</mo><mi>p</mi><mi>i</mi></mrow></mrow><mo>)</mo></math></p>
  
 <p><i>s</i> é o número de espécies na amostra, pi a proporção de indivíduos de cada espécie em relação ao número total de indivíduos de todas as espécies, ou seja, a densidade relativa de cada espécie, e <i>ln</i> é logarítimo neperiano.</p>
 <p>Exemplo de cálculo do índice de<i> Shannon-Wiener</i> em duas áreas com a mesma quantidade de espécies e de indivíduos. DA e DR foram definidos anteriormente, nos estudos de fitossociologia, e os valores indicam o número de indivíduos de cada espécie:</p>
@@ -161,7 +166,7 @@ N = número total de indivíduos.</p>
 <h2>Equabilidade J de Pielou</h2>
 <p>Equabilidade ou índice de Pielou (J) representa a distribuição do número de indivíduos em relação às espécies. Varia de 0 a 1,0, sendo que o valor 1,0 representa a situação em que todas as espécies possuem a mesma abundância, ou seja, a mesma quantidade de indivíduos (MAGURRAN, 1988; FELFILI; VENTUROLI, 2000).</p>
 
-<math><mi>J</mi><mo>=</mo><mfrac><mrow><msup><mrow><mi>H</mi></mrow><mrow><mi>'</mi></mrow></msup></mrow><mrow><mi>H</mi><mi>m</mi><mi>a</mi><mi>x</mi></mrow></mfrac></math>
+<p><math><mi>J</mi><mo>=</mo><mfrac><mrow><msup><mrow><mi>H</mi></mrow><mrow><mi>'</mi></mrow></msup></mrow><mrow><mi>H</mi><mi>m</mi><mi>a</mi><mi>x</mi></mrow></mfrac></math></p>
 
 <p>H’max = ln(S); S é o número de espécies amostradas.</p>
 
@@ -172,7 +177,7 @@ N = número total de indivíduos.</p>
 
 <p>Cálculo da equabilidade J de Pielou:</p>
 
-<math><msub><mrow><mi>J</mi></mrow><mrow><mn>1</mn><mo>(</mo><mi>á</mi><mi>r</mi><mi>e</mi><mi>a</mi><mi> </mi><mn>1</mn><mo>)</mo></mrow></msub><mo>=</mo><mfrac><mrow><mn>1,38</mn></mrow><mrow><mn>1,38</mn></mrow></mfrac><mo>=</mo><mn>1</mn><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><msub><mrow><mi>J</mi></mrow><mrow><mn>2</mn><mo>(</mo><mi>á</mi><mi>r</mi><mi>e</mi><mi>a</mi><mi> </mi><mn>2</mn><mo>)</mo></mrow></msub><mo>=</mo><mfrac><mrow><mn>0,58</mn></mrow><mrow><mn>1,39</mn></mrow></mfrac><mo>=</mo><mn>0,4</mn></math> 
+<p><math><msub><mrow><mi>J</mi></mrow><mrow><mn>1</mn><mo>(</mo><mi>á</mi><mi>r</mi><mi>e</mi><mi>a</mi><mi> </mi><mn>1</mn><mo>)</mo></mrow></msub><mo>=</mo><mfrac><mrow><mn>1,38</mn></mrow><mrow><mn>1,38</mn></mrow></mfrac><mo>=</mo><mn>1</mn><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><msub><mrow><mi>J</mi></mrow><mrow><mn>2</mn><mo>(</mo><mi>á</mi><mi>r</mi><mi>e</mi><mi>a</mi><mi> </mi><mn>2</mn><mo>)</mo></mrow></msub><mo>=</mo><mfrac><mrow><mn>0,58</mn></mrow><mrow><mn>1,39</mn></mrow></mfrac><mo>=</mo><mn>0,4</mn></math> </p>
 
 <p>Cálculo da diferença na riqueza florística entre duas outras áreas.</p>
 
@@ -279,7 +284,9 @@ N = número total de indivíduos.</p>
 <h2>Índice de Jaccard – Sj (Diversidade Beta)</h2>
 <p>O índice de Jaccard é qualitativo, portanto, não considera o número de indivíduos presentes na amostra e sim a presença e a ausência deles.</p>
 
-<math><mi>S</mi><mi>j</mi><mo>=</mo><mfrac><mrow><mi>a</mi></mrow><mrow><mi>a</mi><mo>+</mo><mi>b</mi><mo>+</mo><mi>c</mi></mrow></mfrac></math>
+<span class="pagina">19</span>
+
+<p><math><mi>S</mi><mi>j</mi><mo>=</mo><mfrac><mrow><mi>a</mi></mrow><mrow><mi>a</mi><mo>+</mo><mi>b</mi><mo>+</mo><mi>c</mi></mrow></mfrac></math></p>
 
 <p>a = número de espécies presentes nas duas áreas;</p>
 <p>b = número de espécies exclusivas da área/amostra 1;</p>
@@ -288,7 +295,7 @@ N = número total de indivíduos.</p>
 <h2>Índice de Sorensen – Ss (Diversidade Beta)</h2>
 <p>Índice de Similaridade de Sorensen é similar ao de Jaccard, mas dá peso maior às espécies comuns em relação às duas áreas que estão sendo comparadas.</p>
 
-<math><mi>S</mi><mi>s</mi><mo>=</mo><mfrac><mrow><mn>2</mn><mi>a</mi></mrow><mrow><mn>2</mn><mi>a</mi><mo>+</mo><mi>b</mi><mo>+</mo><mi>c</mi></mrow></mfrac></math>
+<p><math><mi>S</mi><mi>s</mi><mo>=</mo><mfrac><mrow><mn>2</mn><mi>a</mi></mrow><mrow><mn>2</mn><mi>a</mi><mo>+</mo><mi>b</mi><mo>+</mo><mi>c</mi></mrow></mfrac></math></p>
  
 <h2>Exemplo: Diversidade Beta.</h2>
 
