--- a/content/modulo6.html
+++ b/content/modulo6.html
@@ -20,6 +20,8 @@
 
 	<main>
 		<article>
+
+<span class="pagina">20</span>
 			
 <p>BRITO, A.; FERREIRA, M. Z.; MELLO, J. M.; SCOLFORO, J. R. S.; OLIVEIRA, A. D.; ACEWRBI, F. W. Comparação entre os métodos de quadrantes e PRODAN para análises florística, fitossociológica e volumétrica. <b>Revista Cerne</b>, v. 13, n. 4, p. 399-405, 2007.</p>
 
