--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
 
 <p>O primeiro procedimento é entender o que é uma floresta. No senso comum, floresta pode ser definida como: “qualquer vegetação que apresente predominância de indivíduos lenhosos, onde as copas das árvores se tocam formando um dossel”.</p>
 
+<span class="pagina">2</span>
+
 <p>São sinônimos de floresta: mata, mato, bosque, capoeira, selva.</p>
 
 <p>O Dicionário Aurélio da Língua Portuguesa traz a seguinte definição para florestal:</p>
@@ -132,6 +134,8 @@
 
 <p><b>Equipamentos de proteção e segurança:</b> canivete, cantil, capa de chuva, capacete, garrafa de água de 5 litros, kit primeiros socorros, lanterna, luvas macias e resistentes (par), óculos de proteção, perneiras (par), rádios de comunicação, protetor solar e apito.</p>
 
+
+
 <p><b>Equipamentos para identificação</b>: boné, camiseta (manga longa), colete e crachá.</p>
 
 <p><b>Equipamentos para anotações e apoio:</b> balizas para auxiliar na demarcação das parcelas, caderneta de campo, caixa de papelão para envio do material botânico, caneta nanquim, cordão para amarração das prensas (rolo), etiquetas (caixa), facão, folhas de papel jornal, folhas de papelão, giz para cimento (caixa), kit ficha de campo, lápis e borracha, lima, mochila (30 l), pincel atômico permanente, prancheta, prensa, rolo de fita crepe (qualidade).</p>
@@ -141,6 +145,8 @@
 <p><b>Equipamentos para a coleta e identificação de material botânico:</b> álcool 70% (l), binóculos, borrifador, podão rolo de fita plástica (200m), sacos plásticos de lixo (50 l), tesoura de poda, caixa plástica para armazenamento de material botânico.</p>
 
 </ol> 
+
+<span class="pagina">3</span>
 
 <h2>Referências</h2>
 
